# unity-scope-click

./: .bzrignore  AUTHORS  CMakeLists.txt  CODING.md  HACKING  Jenkinsfile  MAINTAINERS  Makefile.am  Makefile.am.coverage  README  README.md  acinclude.m4  autogen.sh  click-scope.vala  click.scope  clickpackages-scope.vala  clickpackages-webservice.vala  clickpackages.scope  compile.sh  configure.ac  download-manager.vala  fake-data.vala  non-click.scope  test-clickpackages-webservice.vala  test.sh
autopilot/: CMakeLists.txt
autopilot/unityclickscope/: __init__.py  credentials.py  fake_servers.py  fixture_setup.py  test_click_scope.py  test_fixture_setup.py
data/: CMakeLists.txt  Makefile.am  click-scope-departments-db.conf.in  clickscope.ini  clickscope.ini.in  clickscope.ini.in.in  com.canonical.scopes.click.ini.in.in  com.canonical.scopes.clickstore.ini.in.in  com.canonical.unity.clickscope.gschema.xml  departments.db  unity-scope-click.service.in  update_schema.sh
debian/: changelog  control  (+7 more)
libclickscope/click/: CMakeLists.txt  application.h  configuration.cpp  configuration.h  dbus_constants.h  department-lookup.cpp  department-lookup.h  departments-db.cpp  departments-db.h  departments.cpp  departments.h  download-manager.cpp  download-manager.h  highlights.cpp  highlights.h  index.cpp  index.h  interface.cpp  interface.h  key_file_locator.cpp  launcher.cpp  launcher.h  launcher.xml  network_access_manager.cpp  network_access_manager.h  package.cpp  package.h  pay.cpp  pay.h  preview.cpp  preview.h  qtbridge.cpp  qtbridge.h  reviews.cpp  reviews.h  scope_activation.cpp  scope_activation.h  ubuntuone_credentials.cpp  ubuntuone_credentials.h  utils.cpp  (+3 more)
libclickscope/tests/: CMakeLists.txt  fake_json.cpp  fake_json.h  mock_network_access_manager.h  mock_pay.h  mock_ubuntu_download_manager.h  mock_ubuntuone_credentials.h  mock_webclient.h  test_bootstrap.cpp  test_configuration.cpp  test_data.cpp  test_data.h  test_departments-db.cpp  test_departments.cpp  test_download_manager.cpp  test_index.cpp  test_interface.cpp  test_package.cpp  test_pay.cpp  test_preview.cpp  test_reviews.cpp  test_smartconnect.cpp  test_utils.cpp  test_webclient.cpp
libclickscope/tests/integration/: CMakeLists.txt  departmentsdb_integration.cpp  webclient_integration.cpp
po/: CMakeLists.txt  LINGUAS  POTFILES.in  am.po  ar.po  ast.po  az.po  be.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  ga.po  gd.po  genpotfiles.sh  gl.po  he.po  hr.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  km.po  ko.po  lv.po  ms.po  (+24 more)
scope/: CMakeLists.txt  clickquery.cpp  clickquery.h  clickscope.cpp  clickscope.h  clickwebservice.cpp  clickwebservice.h  download-manager.cpp  download-manager.h  interface.h  network-access-manager.cpp  network-access-manager.h  webclient.cpp  webclient.h
scope/click/: CMakeLists.txt  Config.h.in  application.h  click-i18n.h  clickwebservice.cpp  clickwebservice.h  config.h.in  configuration.cpp  configuration.h  department-lookup.cpp  department-lookup.h  departments.cpp  departments.h  download-manager.cpp  download-manager.h  index.cpp  index.h  interface.cpp  interface.h  key_file_locator.h  network_access_manager.cpp  network_access_manager.h  package.cpp  package.h  preview.cpp  preview.h  qtbridge.cpp  qtbridge.h  qtscopebridge.cpp  qtscopebridge.h  query.cpp  query.h  reviews.cpp  reviews.h  scope.cpp  scope.h  scope_activation.cpp  scope_activation.h  smartconnect.cpp  smartconnect.h  (+4 more)
scope/clickapps/: CMakeLists.txt  apps-query.cpp  apps-query.h  apps-scope.cpp  apps-scope.h  clickscope.ini.in.in
scope/clickstore/: CMakeLists.txt  com.canonical.scopes.clickstore.ini.in.in  pay.cpp  pay.h  store-query.cpp  store-query.h  store-scope.cpp  store-scope.h
scope/clickstore/installhelper/: CMakeLists.txt  install_helper.cpp  install_helper.h
scope/include/: CMakeLists.txt  Config.h.in  clickscope.h
scope/scope-harness-tests/: apps-scope-harness.py  store-scope-harness.py
scope/tests/: CMakeLists.txt  fake_json.h  fake_nam.cpp  fake_nam.h  main.cpp  mock_network_access_manager.h  mock_pay.h  mock_ubuntu_download_manager.h  mock_ubuntuone_credentials.h  mock_webclient.h  mock_webservice.h  test_apps_query.cpp  test_apps_scope.cpp  test_configuration.cpp  test_data.cpp  test_data.cpp.in  test_data.h  test_departments.cpp  test_download_manager.cpp  test_download_manager.h  test_helpers.h  test_index.cpp  test_interface.cpp  test_main.cpp  test_pay.cpp  test_query.cpp  test_reviews.cpp  test_runner.h  test_smartconnect.cpp  test_store_scope.cpp  test_webclient.cpp  test_webclient.h  webclient_fakes.cpp  webclient_fakes.h
scope/tests/click_interface_tool/: CMakeLists.txt  click_interface_tool.cpp
scope/tests/download_manager_tool/: CMakeLists.txt  download_manager_tool.cpp  download_manager_tool.h
scope/tests/fake_launcher/: CMakeLists.txt  fake_launcher.cpp  fake_launcher.h
scope/tests/integration/: CMakeLists.txt  webclient_integration.cpp
src/: CMakeLists.txt  Makefile.am  assertions.vapi  click-interface.vala  click-scope-main.vala  click-scope.vala  click-webservice.vala  clickscope.cpp  config.vala.in  download-manager.vala  fake-data.vala  non-click-scope.vala  oauth.vapi  rnrclient.vala  test-click-webservice.vala  ubuntuone-credentials.vala  utils.vala
src/test-extras/: click
src/tests/: CMakeLists.txt
tests/: CMakeLists.txt
tests/autopilot/unityclickscope/: __init__.py  fake_services.py  fixture_setup.py  test_fixture_setup.py
tests/common/: fake_server_fixture.py
tests/scope-harness/: CMakeLists.txt  run-harness.sh  run-store-test.sh  store-scope-harness.py
tests/scope-harness/applications/: com.ubuntu.developer.webapps.webapp-amazon_webapp-amazon_1.0.10.desktop  com.ubuntu.dropping-letters_dropping-letters_0.1.2.2.67.desktop  dialer-app.desktop  webbrowser-app.desktop
tests/scope-harness/fake_click/: click
tests/scope-harness/tests/: __init__.py  test_apps.py  test_store.py
tools/init-departments/: CMakeLists.txt  README  init-departments.cpp
(+59 files in other folders)
